# photo_from_camera

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
index_app/: fetchers.py  forms.py  handlers.py  urls.py  views.py
index_app/templates/index_app/: base.html  index.html  photo.html
server/: settings.py  urls.py
